# demo-designs

./: pyproject.toml  tasks.py
development/: nautobot_config.py
jobs/: __init__.py
jobs/VM_Design_LG/: __init__.py
jobs/VM_Design_LG/designs/: 0001_design.yaml.j2
jobs/VM_Design_SM/: __init__.py
jobs/VM_Design_SM/designs/: 0001_design.yaml.j2
jobs/VM_Design_XXL/: __init__.py
jobs/VM_Design_XXL/context/: __init__.py
jobs/VM_Design_XXL/designs/: 0001_design.yaml.j2
jobs/core_site/: __init__.py
jobs/core_site/context/: __init__.py
jobs/core_site/designs/: 0001_design.yaml.j2
jobs/edge_site/: __init__.py
jobs/edge_site/context/: __init__.py
jobs/edge_site/designs/: 0001_design.yaml.j2
jobs/infrastructure_designs/: __init__.py
jobs/infrastructure_designs/context/: __init__.py
jobs/infrastructure_designs/designs/: 0000_basedata.yaml.j2  0001_newpod.yaml.j2  0002_newapplication.yaml.j2
jobs/initial_data/: __init__.py
jobs/initial_data/designs/: 0001_design.yaml.j2
jobs/p2p/: __init__.py
jobs/p2p/context/: __init__.py
jobs/p2p/designs/: 0001_ipam.yaml.j2
jobs/vpn_models_data_generation/: __init__.py
jobs/vpn_models_data_generation/context/: __init__.py  context.yaml
jobs/vpn_models_data_generation/designs/: 0000_vpn_datagen_dc.yaml.j2  0010_basedata.yaml.j2  0020_locations.yaml.j2  0030_vlans.yaml.j2  0040_devices.yaml.j2  0050_prefixes.yaml.j2  0060_ipaddresses.yaml.j2  0070_interfaceredundancygroups.yaml.j2  0080_circuits.yaml.j2  0090_vpns.yaml.j2  01_basedata.yaml.j2  02_locations.yaml.j2  03_vlans.yaml.j2  04_devices.yaml.j2  05_prefixes.yaml.j2  06_ipaddresses.yaml.j2  07_interfaceredundancygroups.yaml.j2  08_circuits.yaml.j2  09_vpns.yaml.j2  1000_vpn_datagen_branches.yaml.j2  1010_basedata.yaml.j2  1020_locations.yaml.j2  1030_vlans.yaml.j2  1040_devices.yaml.j2  1050_prefixes.yaml.j2  1060_ipaddresses.yaml.j2  1070_interfaceredundancygroups.yaml.j2  1080_circuits.yaml.j2  1090_vpns.yaml.j2  vpn_datagen.yaml.j2
jobs/wireless/: __init__.py
jobs/wireless/designs/: 0001_design.yaml.j2
